removed duplicate url in cors

--- a/interview-helper-frontend/index.html
+++ b/interview-helper-frontend/index.html
@@ -11,14 +11,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
 
-  <meta property="og:title" content="interview-avatar-match" />
+  <meta property="og:title" content="AI Interview Simulator" />
   <meta property="og:description" content="AI Interview Simulator" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="" />
+  <meta property="og:image" content="./public/favicon.ico" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@OseniEniola" />
-  <meta name="twitter:image" content="" />
+  <meta name="twitter:image" content="./public/favicon.ico" />
 
   <style>
     .blue-accent {
